# simula-zed-extension

./: Cargo.toml  README.md  extension.toml
languages/simula/: config.toml  highlights.scm  indents.scm
src/: lib.rs
