[package]
name = "simula-extension"
version = "0.0.1"
edition = "2021"
authors = ["Eirik Sletteberg <eiriksletteberg@gmail.com>"]
repository = "https://github.com/your-name/simula-zed-extension"

[lib]
crate-type = ["cdylib"]

[dependencies]
zed_extension_api = "0.1.0"

[workspace]
members = ["simula-extension"]
